Fix scrollbar visible on Window & Linux even if scroll is not needed

--- a/packages/blocks-next/src/blocks/product-quick-view/style.scss
+++ b/packages/blocks-next/src/blocks/product-quick-view/style.scss
@@ -19,7 +19,7 @@
 		border-radius: var(--sc-border-radius-medium);
 		box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
 		background: white;
-		overflow: scroll;
+		overflow: auto;
 		transition: opacity, transform, var(--sc-transition-medium);
 
 		&__content {
